--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <title>Atis</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="style/stylesheets/lib/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="style/stylesheets/lib/bootstrap-grid.min.css"/>
-    <link rel="stylesheet" type="text/css" href="style/stylesheets/lib/bootstrap-reboot.min.css"/>
     <link rel="stylesheet" type="text/css" href="style/stylesheets/main.css"/>
 </head>
 <body>
@@ -388,8 +385,8 @@
 <!--POP-UP-END-->
 
 <!--Scripts-->
-<script src="js/lib/jquery-3.1.1.min.js"></script>
-<script src="js/lib/bootstrap.min.js"></script>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 
 </body>
